--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-component-sample",
+  "name": "angular-1.5-component-example",
   "dependencies": {
     "angular": "1.5.9",
     "bootstrap": "^3.3.7"
